Fix a bug with upload data source and added a radio for create data source or create data source griup

--- a/Website/client/views/modal_div.html
+++ b/Website/client/views/modal_div.html
@@ -14,7 +14,8 @@
         <table width=90% align=center style="border:none; padding-top: 1px;padding-bottom: 1px;">
 
           <tr style="padding-top: 1px;padding-bottom: 1px;">
-            <td colspan=2 style="padding-top: 1px;padding-bottom: 1px;"><b>Create New Data Source</b></td>
+            <td colspan=1 style="padding-top: 1px;padding-bottom: 1px;"><b>Create New Data Source</b></td>
+            <td>Single Data Source: <input type=radio name=ds_group onclick="alert('change table!');"> Data Source Group: <input type=radio name=ds_group onclick="alert('change table!');"></td>
           </tr>
 
           <tr style="padding-top: 1px;padding-bottom: 1px;">
