add configure carousel to account modal

--- a/Server/CronJobs/ProcessIndex/views/index.tmpl
+++ b/Server/CronJobs/ProcessIndex/views/index.tmpl
@@ -362,6 +362,67 @@
           <input type=file>
         </td>
       </tr>
+
+      <tr>
+      <td colspan=2>
+
+<table>
+  <tr>
+    <td>Headline1</td>
+    <td>Headline2</td>
+    <td>Headline3</td>
+    <td>Headline4</td>
+    <td>Headline5</td>
+  </tr>
+  <tr>
+    <td>
+      <select>
+        <option>CNN</option>
+        <option>BBC</option>
+        <option>ESPN</option>
+      </select>
+    </td>
+
+    <td>
+      <select>
+        <option>CNN</option>
+        <option>BBC</option>
+        <option>ESPN</option>
+      </select>
+    </td>
+
+    <td>
+      <select>
+        <option>CNN</option>
+        <option>BBC</option>
+        <option>ESPN</option>
+      </select>
+    </td>
+
+    <td>
+      <select>
+        <option>CNN</option>
+        <option>BBC</option>
+        <option>ESPN</option>
+      </select>
+    </td>
+
+    <td>
+      <select>
+        <option>CNN</option>
+        <option>BBC</option>
+        <option>ESPN</option>
+      </select>
+    </td>
+  </tr>
+</table>
+
+      </td>
+      </tr>
+
+
+
+
       <tr>
         <td colspan=2 align=right>
           <a href="#" onclick="registerUser();">Accept</a>
