some general clean up and addition of another help page

--- a/Server/CronJobs/ProcessIndex/views/index.tmpl
+++ b/Server/CronJobs/ProcessIndex/views/index.tmpl
@@ -49,13 +49,22 @@
     <div id="topnav">
       <ul>
         <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="#">About</a>
+
+        <li><a href="#">Post</a>
           <ul>
-            <li><a href="help.html">How to Use This Site</a></li>
-            <li><a href="#">What Is This Site</a></li>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Browser Plug-Ins</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#">Article</a></li>
+            <li><a href="#">Photo or Video</a></li>
+            <li><a href="#">Classified Ad</a></li>
+            <li><a href="#">Event</a></li>
+          </ul>
+        </li>
+
+        <li class="last"><a href="#">Community &nbsp; &nbsp; &nbsp; </a>
+          <ul>
+            <li><a href="#">Classifieds</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">Top Stories</a></li>
+            <li><a href="#">Top Contributors</a></li>
           </ul>
         </li>
 
@@ -67,29 +76,24 @@
             <li><a href="#">Windows Mobile</a></li>
           </ul>
         </li>
-        <li><a href="#">Post</a>
+
+        <li><a href="#">Help</a>
           <ul>
-            <li><a href="#">Classified Ad</a></li>
-            <li><a href="#">Photo or Video</a></li>
-            <li><a href="#">Article</a></li>
-            <li><a href="#">Event</a></li>
+            <li><a href="help.html">Basic Usage</a></li>
+            <li><a href="money.html">How to Make Money</a></li>
+            <li><a href="#">FAQ</a></li>
+            <li><a href="#">Browser Plug-Ins</a></li>
+            <li><a href="#">Contact</a></li>
           </ul>
         </li>
-        <li class="last"><a href="#">Community</a>
-          <ul>
-            <li><a href="#">Classifieds</a></li>
-            <li><a href="#">Events</a></li>
-            <li><a href="#">Top Stories</a></li>
-            <li><a href="#">Top Contributors</a></li>
-          </ul>
-        </li>
+
       </ul>
     </div>
     <div id="search">
       <form action="#" method="post">
         <fieldset>
           <legend>Site Search</legend>
-          <input type="text" value="Search Our Website&hellip;"  onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;" />
+          <input type="text" value="Search The Website&hellip;"  onfocus="this.value=(this.value=='Search The Website&hellip;')? '' : this.value ;" />
           <input type="submit" name="go" id="go" value="Search" />
         </fieldset>
       </form>
@@ -173,8 +177,8 @@
             <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
           </li>
           <li ondblclick="alert('Not User Configurable');"><img src="images/demo/business.jpg" alt="" />
-            <p>Retailers report sales are down. How will they fare once ObamaCare begins in 2013.</p>
-            <p>Americans will now be required to purchase health care; what about the average business.</p>
+            <p>Retailers report sales are down while the minimum wage continues to rise.</p>
+            <p>Many workers no longer rely on their employer for health insurance.</p>
             <p class="readmore"><a href="#">Continue Reading &raquo;</a></p>
           </li>
           <li class="last" ondblclick="alert('Not User Configurable');"><img src="images/demo/misc.jpg" alt="" />
@@ -304,6 +308,7 @@
   <div>
     <a href="#close" title="Close" class="close">X</a>
     <h2><span id="account_mode">Create</span> Account</h2>
+    <b>Current Balance: </b> $0.00 &nbsp; &nbsp; &nbsp; <button>Pay Me</button><br/>
     <table width=80% align=center>
       <tr>
         <td align=right>Email:</td>
@@ -367,6 +372,7 @@
       <td colspan=2>
 
 <table>
+  <tr><td colspan=5 align=center><b>Set Top Stories Carousel Data Sources</b></td></tr>
   <tr>
     <td>Headline1</td>
     <td>Headline2</td>
@@ -420,15 +426,14 @@
       </td>
       </tr>
 
-
-
-
       <tr>
         <td colspan=2 align=right>
           <a href="#" onclick="registerUser();">Accept</a>
         </td>
       </tr>
     </table>
+    <br/>
+    <button>My History</button><br/>
   </div>
 </div>
 
